add pictures, add stylings for pics, add content

--- a/css/animals.css
+++ b/css/animals.css
@@ -9,3 +9,13 @@
 #insects {
   display: none;
 }
+
+.center {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
+}
+body {
+  font-family: verdana;
+}
